apps/hotel-reservation/02-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: phoenix-app
  labels:
    app.kubernetes.io/name: identity-service
    app.kubernetes.io/part-of: hotel-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: identity-service
        app.kubernetes.io/name: identity-service
        app.kubernetes.io/part-of: hotel-reservation
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "7102"
        prometheus.io/path: "/metrics"
        fluentbit.io/parser: json
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
      containers:
        - name: identity-service
          image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-identity-service:f10391d0474670ac507f8bd7385178effa4b8147
          ports:
            - containerPort: 7102
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 7102
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 7102
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: phoenix-app
  labels:
    app: identity-service
spec:
  selector:
    app: identity-service
  ports:
    - name: http
      port: 80
      targetPort: 7102
  template:
    spec:
      containers: []
