apps/hotel-reservation/03-hotel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service
  namespace: phoenix-app
  labels:
    app.kubernetes.io/name: hotel-service
    app.kubernetes.io/part-of: hotel-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-service
  template:
    metadata:
      labels:
        app: hotel-service
        app.kubernetes.io/name: hotel-service
        app.kubernetes.io/part-of: hotel-reservation
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "7103"
        prometheus.io/path: "/metrics"
        fluentbit.io/parser: json
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
      containers:
        - name: hotel-service
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 7103
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 7103
            initialDelaySeconds: 5
            periodSeconds: 10
          image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-hotel-service:dea7c76e5af227a5e121946fa9bee23711b3db8e
          ports:
            - containerPort: 7103
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
  namespace: phoenix-app
  labels:
    app: hotel-service
spec:
  selector:
    app: hotel-service
  ports:
    - name: http
      port: 80
      targetPort: 7103
  template:
    spec:
      containers: []
