apps/hotel-reservation/04-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: phoenix-app
  labels:
    app.kubernetes.io/name: booking-service
    app.kubernetes.io/part-of: hotel-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
        app.kubernetes.io/name: booking-service
        app.kubernetes.io/part-of: hotel-reservation
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "7104"
        prometheus.io/path: "/metrics"
        fluentbit.io/parser: json
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
      containers:
        - name: booking-service
          image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-booking-service:035ca6bc3a93a6973ecf9d17db83ea935385820d
          ports:
            - containerPort: 7104
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 7104
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 7104
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: phoenix-app
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 7104
  template:
    spec:
      containers: []
