apps/hotel-reservation/05-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: phoenix-app
  labels:
    app.kubernetes.io/name: search-service
    app.kubernetes.io/part-of: hotel-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
        app.kubernetes.io/name: search-service
        app.kubernetes.io/part-of: hotel-reservation
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "7105"
        prometheus.io/path: "/metrics"
        fluentbit.io/parser: json
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
      containers:
      - name: search-service
        image: ttl.sh/phoenix-hotel-search-service-v1:2h
        ports:
        - containerPort: 7105
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 7105
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 7105
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: phoenix-app
  labels:
    app: search-service
spec:
  selector:
    app: search-service
  ports:
  - port: 80
    targetPort: 7105
