apps/hotel-reservation/06-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: phoenix-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: ttl.sh/phoenix-hotel-notification-service-v1:2h
        ports:
        - containerPort: 7101
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: phoenix-app
spec:
  selector:
    app: notification-service
  ports:
  - port: 80
    targetPort: 7101
