apps/hotel-reservation/07-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: phoenix-app
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: hotel-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: hotel-reservation
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "7008"
        prometheus.io/path: "/metrics"
        fluentbit.io/parser: json
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
      imagePullSecrets:
        - name: regcred
      containers:
        - name: api-gateway
          image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-api-gateway-service:5a960badd374e01bced430311978d97f155104f2
          ports:
            - containerPort: 7008
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "768Mi"
              cpu: "700m"
          livenessProbe:
            tcpSocket:
              port: 7008
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 7008
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: phoenix-app
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 7008
      targetPort: 7008
  template:
    spec:
      containers: []
