apps/hotel-reservation/08-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: phoenix-app
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: hotel-reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: hotel-reservation
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "4173"
        prometheus.io/path: "/metrics"
        fluentbit.io/parser: nginx
    spec:
      securityContext:
        fsGroup: 101
        runAsUser: 101
        runAsGroup: 101
        runAsNonRoot: true
      containers:
        - name: frontend
          image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-frontend-service:5c0c469477dd00897e0b19c4816eabe304c63634
          imagePullPolicy: Always
          ports:
            - containerPort: 4173 # <--- CHANGED FROM 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 4173
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 4173
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: asgardeo-runtime-config
              mountPath: /usr/share/nginx/html/runtime-config.js
              subPath: runtime-config.js
      volumes:
        - name: asgardeo-runtime-config
          configMap:
            name: asgardeo-config
            items:
              - key: runtime-config.js
                path: runtime-config.js
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: phoenix-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80 # Keep this 80 (Internal Cluster Port)
      targetPort: 4173 # <--- CHANGED: Connect to the container on 4173
  template:
    spec:
      containers: []
